# obsidian-mcp-server

./: .gitignore  Dockerfile  LICENSE  PRODUCT_SPEC.md  README.md  conftest.py  docker-compose.yml  env.example  pyproject.toml  test_decryption.py
obsidian_mcp_server/: __init__.py  __main__.py  config.py  couchdb_client.py  encryption.py  errors.py  pagination.py  rate_limiter.py  server.py  types.py
obsidian_mcp_server/transport/: http_stream.py
tests/: __init__.py  conftest.py  test_call_tool.py  test_http_stream.py  test_http_transport_server.py  test_imports.py  test_initialize.py  test_list_resources_pagination.py  test_list_tools_pagination.py  test_pagination.py  test_pagination_edge_cases.py  test_read_resource.py  test_server_helpers.py  test_types.py
